tests/valid/enum/no_payload_match_regression.facet
enum Switch {
  Off,
  On
}

fn toggled(s: unrestricted Switch) -> unrestricted isize {
  match s {
    Off => 0,
    On => 1,
  }
}
