tests/invalid/enum/unknown_enum_constructor.facet
fn bad() -> unrestricted Missing {
  Missing::Nope()
}
